--- a/BaraoFeedback.Api/appsettings.json
+++ b/BaraoFeedback.Api/appsettings.json
@@ -1,4 +1,18 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:80"
+      },
+      "Https": {
+        "Url": "https://*:443",
+        "Certificate": {
+          "Path": "/etc/ssl/certs/selfsigned.crt",
+          "KeyPath": "/etc/ssl/private/selfsigned.key"
+        }
+      }
+    }
+  },
   "ConnectionStrings": {
     "strConnection": "Server=baraofeedbackdb.c5s662q4i9zs.us-east-1.rds.amazonaws.com;Database=baraofeedbackDb;Port=5432;User Id=postgres;Password=MBj72*Al$AcbMD?Xxx<?J<2xk?*j;"
   },
