--- a/BaraoFeedback.Api/appsettings.json
+++ b/BaraoFeedback.Api/appsettings.json
@@ -7,8 +7,8 @@
       "Https": {
         "Url": "https://*:443",
         "Certificate": {
-          "Path": "/etc/ssl/certs/selfsigned.crt",
-          "KeyPath": "/etc/ssl/private/selfsigned.key"
+          "Path": "./certificate.pfx",
+          "Password": "Celorio2"
         }
       }
     }
