--- a/BaraoFeedback.Application/BaraoFeedback.Application.csproj
+++ b/BaraoFeedback.Application/BaraoFeedback.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="LinqKit" Version="1.3.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0" />
   </ItemGroup>
