--- a/BaraoFeedback.Api/appsettings.json
+++ b/BaraoFeedback.Api/appsettings.json
@@ -1,6 +1,9 @@
-{ 
+{
   "ConnectionStrings": {
-    "strConnection": "Server=baraofeedbackdb.c5s662q4i9zs.us-east-1.rds.amazonaws.com;Database=baraofeedbackDb;Port=5432;User Id=postgres;Password=MBj72*Al$AcbMD?Xxx<?J<2xk?*j;"
+    //"strConnection": "Server=baraofeedbackdb.c5s662q4i9zs.us-east-1.rds.amazonaws.com;Database=baraofeedbackDb;Port=5432;User Id=postgres;Password=MBj72*Al$AcbMD?Xxx<?J<2xk?*j;"
+    //"strConnection": "Server=localhost,1433;Database=baraofeedbackDb;User Id=Developer;Password=SqlServer2019!;TrustServerCertificate=True;"
+    "strConnection": "Server=localhost,1433;Database=MeuBanco;User Id=sa;Password=SqlServer2019!;TrustServerCertificate=True;"
+
   },
   "Logging": {
     "LogLevel": {
