--- a/BaraoFeedback.Application/BaraoFeedback.Application.csproj
+++ b/BaraoFeedback.Application/BaraoFeedback.Application.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0" />
+    <PackageReference Include="EPPlus" Version="7.0.8" />
   </ItemGroup>
 
   <ItemGroup>
